# GQM-matrix

./: .gitignore  Start Command.txt  main.py  pyproject.toml  requirements.txt
Umair/: backtester.py  calcs_matrix.py  config.py  main.py  market_data.csv  server.py
Umair/Frontend/: index.html
Umair/database/: redis_client.py
Umair/ingestion/: arkham_client.py  binance_ws.py
data/: dasas.txt  kp.txt
docs/: DOCUMENTATION.md
frontend/: app.js  docs.js  index.html  matrix_engine.js  orderbook.js  project2.css  project2.js  shell.js  styles.css
src/: matrix_engine.py  newScript.txt
src/gqm_matrix/: __init__.py  api.py  bybit_market.py  calcs_matrix.py  celestial_aspects.py  celestial_ephemeris.py  cli.py  coordinates.py  dynamic_ppd.py  godzilla_engine.py  jh_engine.py  lattice_band.py  live_stream.py  markers.py  market.py  matrix.py  matrix_engine_service.py  matrix_stream.py  models.py  mw_anchor.py  orderbook_stream.py  redis_client.py  schemas.py  server.py  spoof_detector.py  utc_time.py  vortex.py
src/gqm_matrix/ingestion/: arkham_client.py  binance_ws.py  bybit_ws.py
