[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gqm-matrix"
version = "1.0.0"
description = "GQM Astro-Quant live stream platform"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "pyswisseph>=2.10.0",
]

[project.scripts]
gqm-serve = "gqm_matrix.server:main"

[tool.setuptools.packages.find]
where = ["src"]
